--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
             <a-asset-item id="eventImgJPEG" src="./MDs_Event_thumbnail.jpg"></a-asset-item>
         </a-assets>
         <a-marker preset="hiro">
-            <a-image src="#eventImgJPEG" position="0 0.1 0" rotation="90 0 0"></a-image>
+            <a-image src="#eventImgJPEG" position="0 0.1 0" rotation="-90 0 0" shader="flat"></a-image>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
 </body>
 
 </html>
+
