--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
         <a-light type="ambient" color="#FFF" intensity="0.5"></a-light>
         <a-light type="directional" color="#FFF" intensity="0.7" position="-1 1 2"></a-light>
         <a-assets>
-            <a-asset-item id="eventImgJPEG" src="./MDs_Event_thumbnail.jpg"></a-asset-item>
+            <a-asset-item id="eventImgPNG" src="./MDs_People_thumbnail.png"></a-asset-item>
         </a-assets>
         <a-marker preset="hiro">
-            <a-image src="#eventImgJPEG" position="0 0.1 0" rotation="-90 0 0" shader="flat" width="1.78" height="1"></a-image>
+            <a-image src="#eventImgPNG" position="0 0.1 0" rotation="-90 0 0" shader="flat" width="1.78" height="1"></a-image>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
 </body>
 
 </html>
+
 
 
