--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 <body>
     <a-scene embedded arjs>
         <a-assets>
-            <a-asset-item id="eventImgPNG" src="./MDs_People_thumbnail.png"></a-asset-item>
+            <!--<a-asset-item id="eventImgPNG" src="./MDs_People_thumbnail.png"></a-asset-item>-->
         </a-assets>
         <a-marker preset="hiro">
-            <a-image src="#eventImgPNG" position="0 0.1 0" rotation="-90 0 0" scale="1 1 1"></a-image>
+            <a-image src="./MDs_People_thumbnail.png" position="0 0.1 0" rotation="-90 0 0" scale="1 1 1"></a-image>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
 </body>
 
 </html>
+
 
 
 
